<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<CheckBoxPreference
		android:key="EnableJavaScripts"
		android:title="@string/javascript"
		android:summary="EnableJavaScripts" />

	<CheckBoxPreference
		android:key="homepage-select"
		android:title="@string/home_select"
		android:summary="Homepage-select"/>

	<ListPreference
		android:key="home_preference"
		android:title="@string/home_list"
		android:summary="HomePreference"
		android:entries="@array/home_list"
		android:entryValues="@array/homevalues"
		android:dialogTitle="SelectPages" />

	<EditTextPreference
		android:key="home_Url"
		android:title="@string/homeUrl"
		android:summary="EnterHomeUrl"
		android:dialogTitle="@string/homeUrl" />

	<CheckBoxPreference
		android:key="tweet"
		android:title="@string/tweet_up"
		android:summary="tweet" />

	<EditTextPreference
		android:key="tweet_type"
		android:title="@string/tweet_type"
		android:summary="Edit Tweet Style"
		android:dialogTitle="@string/tweet_type"/>

</PreferenceScreen>
